# zendoom

./: .clang-format  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  Doxyfile  HACKING.md  Makefile.am  README.md  config.h  configure.ac  meson.build  shell.nix  smol-doom  smol-doom.cfg
opl/: CMakeLists.txt  Makefile.am  opl.c  opl_queue.c
scripts/: clangformat.sh  clangtidy.sh
src/: .gitignore  CMakeLists.txt  Makefile.am  aes_prng.c  aes_prng.h  d_dedicated.c  d_event.c  d_event.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_ticcmd.h  deh_defs.h  deh_io.c  deh_io.h  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_str.c  deh_str.h  deh_text.c  doomkeys.h  doomtype.h  i_endoom.c  i_glob.c  i_input.c  i_input.h  i_joystick.c  i_joystick.h  i_main.c  i_midipipe.h  i_musicpack.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_sound.h  (+62 more)
src/automap/: automap.c  automap.h
src/doom/: CMakeLists.txt  am_map.c  d_items.c  d_items.h  d_main.c  d_net.c  d_player.h  d_textur.h  deh_ammo.c  deh_bexstr.c  deh_cheat.c  deh_doom.c  deh_frame.c  deh_misc.c  deh_misc.h  deh_ptr.c  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.h  doomstat.c  doomstat.h  dstrings.c  dstrings.h  f_finale.c  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  info.c  info.h  m_menu.c  m_random.c  p_ceilng.c  p_doors.c  p_enemy.c  (+43 more)
src/game/: cheat.c  controls.c  def.c  def.h  english.h  event.c  event.h  finale.c  finale.h  game.c  game.h  gamemode.c  gamemode.h  info.c  items.c  items.h  loop.c  main.c  stat.c  stat.h  strings.c  strings.h  tables.c  tables.h  wipe.c
src/hud/: lib.c  lib.h  stuff.c  stuff.h
src/impl/: endoom.c  glob.c  input.c  input.h  joystick.c  musicpack.c  sdlmusic.c  sdlsound.c  sound.c  sound.h  system.c  system.h  timer.c  timer.h  video.c  video.h
src/lib/: argv.c  argv.h  fixed.c  random.h  sha1.h  texture.h  type.h
src/mem/: native.c  zone.c
src/menu/: menu.c  menu.h
src/misc/: bbox.c  bbox.h  config.c  config.h  misc.c  misc.h
src/net/: client.c  client.h  common.c  defs.h  gui.c  gui.h  io.c  io.h  loop.c  loop.h  net.c  packet.c  query.c  sdl.c  server.c  server.h  structrw.c  structrw.h
src/player/: ceiling.c  door.c  enemy.c  floor.c  fx.c  inter.c  lights.c  local.h  map.c  maputl.c  mobj.c  mobj.h  platform.c  player.h  savegame.c  setup.c  setup.h  sight.c  sprite.c  sprite.h  switch.c  tick.c  user.c
src/renderer/: bsp.c  data.c  data.h  defs.h  draw.c  draw.h  local.h  main.c  plane.c  state.h  things.c
src/setup/: Makefile.am
src/sound/: sound.c  sounds.c  sounds.h
src/status/: lib.c  lib.h  stuff.c  stuff.h
src/video/: diskicon.c  video.c  video.h
src/wad/: checksum.c  file.c  file.h  file_posix.c  file_stdc.c  iwad.c  main.c  main.h  merge.c  wad.c  wad.h
src/window/: stuff.c
textscreen/: txt_button.c  txt_button.h  txt_checkbox.c  txt_checkbox.h  txt_conditional.c  txt_conditional.h  txt_desktop.c  txt_desktop.h  txt_fileselect.c  txt_gui.c  txt_gui.h  txt_io.c  txt_io.h  txt_radiobutton.c  txt_radiobutton.h  txt_sdl.c  txt_sdl.h  txt_spinctrl.c  txt_spinctrl.h  txt_table.c  txt_table.h  txt_window.c  txt_window.h  txt_window_action.c  txt_window_action.h
zendoom/: Doxyfile  README.md  meson.build
zendoom/scripts/: cppcheck.sh
zendoom/src/automap/: automap.c
zendoom/src/game/: controls.c  data.h  event.c  game.h  gamemode.h  info.h  loop.h  main.c  main.h  stat.h  ticcmd.h
zendoom/src/hud/: lib.c
zendoom/src/impl/: glob.c  glob.h  input.c  musicpack.c  video.c  video.h
zendoom/src/lib/: sha1.c
zendoom/src/mem/: native.c  zone.c
zendoom/src/menu/: menu.c
zendoom/src/misc/: config.c  misc.h
zendoom/src/net/: client.c  client.h  common.c  common.h  defs.h  loop.c  packet.h  petname.c  query.c  query.h  sdl.c  sdl.h  server.c  structrw.c
zendoom/src/player/: ceiling.c  floor.c  fx.h  map.c  mobj.h  savegame.c  savegame.h  setup.c  sprite.c  teleport.c  tick.c
zendoom/src/renderer/: main.h  plane.c  plane.h  segs.c  sky.c  things.c
zendoom/src/sound/: sound.c  sound.h  sounds.h
zendoom/src/status/: stuff.c
zendoom/src/video/: diskicon.c
zendoom/src/wad/: checksum.h  file_stdc.c  iwad.c  iwad.h  merge.h  wad.c
zendoom/src/window/: stuff.h
