project('smoldoom', 'c',
       default_options: 'default_library=static')

sdl2 = dependency('SDL2')
sdl2_net = dependency('SDL2_net')
sdl2_mixer = dependency('SDL2_mixer')

deps = [sdl2, sdl2_net, sdl2_mixer]

# Source files used by both the client binary and the server binary

common_source_files = files(
    'src/impl/system.c',
    'src/lib/argv.c',
    'src/misc/misc.c',
    'src/lib/fixed.c',
    'src/lib/sha1.c',
)


game_source_files = files(
    'src/game/main.c',
    'src/player/mobj.c',
    'src/player/enemy.c',
    'src/game/finale.c',
    'src/game/stat.c',
    'src/game/strings.c',
    'src/lib/random.c',
    'src/game/game.c',
    'src/game/info.c',
    'src/game/items.c',
    'src/game/wipe.c',
    'src/game/event.c',
    'src/game/loop.c',
    'src/game/gamemode.c',
    'src/game/cheat.c',
    'src/game/controls.c',
    'src/automap/automap.c',
    'src/hud/lib.c',
    'src/hud/stuff.c',
    'src/status/lib.c',
    'src/status/stuff.c',
    'src/window/stuff.c',
    'src/player/ceiling.c',
    'src/player/door.c',
    'src/player/inter.c',
    'src/player/fx.c',
    'src/player/floor.c',
    'src/player/lights.c',
    'src/player/local.h',
    'src/player/map.c',
    'src/player/maputl.c',
    'src/player/platform.c',
    'src/player/savegame.h',
    'src/player/savegame.c',
    'src/player/setup.c',
    'src/player/sight.c',
    'src/player/sprite.c',
    'src/player/switch.c',
    'src/player/teleport.c',
    'src/player/tick.c',
    'src/player/user.c',
    'src/menu/menu.c',
    'src/sound/sound.c',
    'src/sound/sounds.c',
    'src/impl/endoom.c',
    'src/impl/glob.c',
    'src/impl/input.c',
    'src/impl/joystick.c',
    'src/impl/musicpack.c',
    'src/impl/sdlmusic.c',
    'src/impl/sdlsound.c',
    'src/impl/sound.c',
    'src/impl/timer.c',
    'src/impl/video.c',
    'src/misc/bbox.c',
    'src/misc/config.c',
    'src/net/client.c',
    'src/net/common.c',
    'src/net/defs.h',
    'src/net/net.c',
    'src/net/gui.c',
    'src/net/io.c',
    'src/net/loop.c',
    'src/net/packet.c',
    'src/net/petname.c',
    'src/net/query.c',
    'src/net/sdl.c',
    'src/net/server.c',
    'src/net/structrw.c',
    'src/game/tables.c',
    'src/video/diskicon.c',
    'src/video/video.c',
    'src/mem/zone.c',
    'src/wad/iwad.c',
    'src/wad/merge.c',
    'src/wad/checksum.c',
    'src/wad/main.c',
    'src/wad/wad.c',
    'src/wad/file.c',
    'src/wad/file_stdc.c',
    'src/wad/file_posix.c',
    'src/renderer/bsp.c',
    'src/renderer/data.c',
    'src/renderer/draw.c',
    'src/renderer/main.c',
    'src/renderer/plane.c',
    'src/renderer/segs.c',
    'src/renderer/sky.c',
    'src/renderer/things.c',
)

dedicated_server_files = files(

    'src/wad/iwad.c',
    'src/game/gamemode.c',
    'src/impl/timer.c',
    'src/misc/config.c',
    'src/net/common.c',
    'src/net/io.c',
    'src/net/packet.c',
    'src/net/sdl.c',
    'src/net/query.c',
    'src/net/server.c',
    'src/net/structrw.c',
    'src/mem/native.c',
)

executable('smoldoom', common_source_files, game_source_files, dependencies: deps)
